<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:divider="@drawable/rv_divider"
    android:orientation="vertical"
    android:showDividers="middle">

    <Switch
        android:id="@+id/st_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15"
        android:singleLine="true"
        android:switchMinWidth="0dp"
        android:text="@string/videoInterrogation"
        android:textColor="@color/txtSuperColor"
        android:textOff=""
        android:textOn=""
        android:textSize="@dimen/dp_16"
        android:thumb="@drawable/switch_thumb"
        android:track="@drawable/switch_track" />

    <LinearLayout
        android:id="@+id/Ll_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/servicePrice"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_next"
        style="@style/unifyBottomBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_170"
        android:text="@string/save" />
</LinearLayout>