<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvScheduling"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvCanMakeAppointment" />

    <TextView
        android:id="@+id/tvMakeSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:drawablePadding="@dimen/spacing_small_much"
        android:gravity="center"
        android:paddingRight="@dimen/spacing_medium_small"
        android:singleLine="true"
        android:text="@string/hasScheduling"
        android:textColor="@color/txtSuperColor"
        android:textSize="@dimen/txt_small"
        app:layout_constraintBottom_toTopOf="@+id/tvModify"
        app:layout_constraintRight_toLeftOf="@+id/tvCanMakeAppointment" />

    <TextView
        android:id="@+id/tvCanMakeAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:drawablePadding="@dimen/spacing_small_much"
        android:gravity="center"
        android:paddingRight="@dimen/spacing_medium_small"
        android:singleLine="true"
        android:text="@string/canScheduling"
        android:textColor="@color/txtSuperColor"
        android:textSize="@dimen/txt_small"
        app:layout_constraintBottom_toTopOf="@+id/tvModify"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/tvModify"
        style="@style/unifyBottomBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>