<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/dp_15"
    android:paddingLeft="@dimen/dp_15"
    android:background="@color/white">

    <!-- 2018年06月 -->
    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_rect"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dp_15"
        android:paddingTop="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_24"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/txtSecondColor"
        android:textSize="@dimen/dp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tagSelectTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_15"
        android:paddingTop="@dimen/dp_15"
        android:singleLine="true"
        android:text="@string/selectTime"
        android:textColor="@color/txtSecondColor"
        android:textSize="@dimen/dp_16"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvScheduling"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvCanMakeAppointment"
        app:layout_constraintTop_toBottomOf="@+id/tagSelectTime" />


    <TextView
        android:id="@+id/tvHaveScheduling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:drawablePadding="@dimen/spacing_small_much"
        android:gravity="center"
        android:paddingRight="@dimen/spacing_medium_small"
        android:singleLine="true"
        android:text="@string/haveScheduling"
        android:textColor="@color/txtSuperColor"
        android:textSize="@dimen/txt_small"
        app:layout_constraintBottom_toTopOf="@+id/tvConfirm"
        app:layout_constraintRight_toLeftOf="@+id/tvButScheduling" />

    <TextView
        android:id="@+id/tvButScheduling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:drawablePadding="@dimen/spacing_small_much"
        android:gravity="center"
        android:paddingRight="@dimen/spacing_medium_small"
        android:singleLine="true"
        android:text="@string/butScheduling"
        android:textColor="@color/txtSuperColor"
        android:textSize="@dimen/txt_small"
        app:layout_constraintBottom_toTopOf="@+id/tvConfirm"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/tvConfirm"
        style="@style/unifyBottomBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>