<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:divider="@drawable/rv_divider"
    android:orientation="vertical"
    android:showDividers="middle">

    <Switch
        android:id="@+id/switchInquisition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15"
        android:singleLine="true"
        android:switchMinWidth="0dp"
        android:text="@string/imgTextInquisition"
        android:textColor="@color/txtSuperColor"
        android:textOff=""
        android:textOn=""
        android:textSize="@dimen/dp_16"
        android:thumb="@drawable/switch_thumb"
        android:track="@drawable/switch_track" />

    <LinearLayout
        android:id="@+id/llGratuitousNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_rect"
        android:padding="@dimen/dp_15">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/everyDayGratuitousNum"
            android:textColor="@color/txtSuperColor"
            android:textSize="@dimen/dp_16" />

        <TextView
            android:id="@+id/tvGratuitousNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:singleLine="true"
            android:text="1次"
            android:textColor="@color/txtSuperColor"
            android:textSize="@dimen/dp_16" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSettingScheduling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_rect"
        android:padding="@dimen/dp_15"
        android:singleLine="true"
        android:text="@string/setScheduling"
        android:textColor="@color/txtSuperColor"
        android:textSize="@dimen/dp_16" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>