<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded_rect_large"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        android:singleLine="true"
        android:text="@string/gratuitousNum"
        android:textColor="@color/txtSuperColor"
        android:textSize="@dimen/dp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/rv_divider" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/shape_edit_bg"
        android:padding="@dimen/dp_9">

        <EditText
            android:id="@+id/editNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/txtSuperColor"
            android:textSize="@dimen/dp_16" />

        <TextView
            android:id="@+id/tvUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_8"
            android:singleLine="true"
            android:text="@string/num"
            android:textColor="@color/txtLight"
            android:textSize="@dimen/dp_16" />
    </LinearLayout>

    <Button
        android:id="@+id/btnOk"
        style="@style/unifyBottomBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_40"
        android:paddingRight="@dimen/dp_40"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/ok" />

</LinearLayout>