<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.Guideline
            android:id="@+id/header_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.17"/>

    <android.support.constraint.Guideline
            android:id="@+id/footer_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="403dp"/>

    <android.support.constraint.Guideline
            android:id="@+id/left_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_50"/>

    <android.support.constraint.Guideline
            android:id="@+id/right_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_50"/>

    <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pad_login"
            android:textColor="@color/txtSuperColor"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="@+id/left_line"
            app:layout_constraintRight_toRightOf="@+id/right_line"
            app:layout_constraintTop_toBottomOf="@+id/header_line"/>


    <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_username"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_60"
            android:background="@null"
            android:hint="@string/please_enter_username"
            android:textColorHint="#cdd0d5"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/sp_16"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="20"
            app:layout_constraintLeft_toLeftOf="@+id/left_line"
            app:layout_constraintRight_toRightOf="@+id/right_line"
            app:layout_constraintTop_toBottomOf="@+id/login_title"/>

    <View
            android:id="@+id/username_line"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/lineColor"
            app:layout_constraintLeft_toLeftOf="@+id/left_line"
            app:layout_constraintRight_toRightOf="@+id/right_line"
            app:layout_constraintTop_toBottomOf="@+id/login_username"/>


    <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:background="@null"
            android:hint="@string/please_enter_password"
            android:textSize="@dimen/sp_16"
            android:textColorHint="#cdd0d5"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="16"
            app:layout_constraintLeft_toLeftOf="@+id/left_line"
            app:layout_constraintRight_toRightOf="@+id/right_line"
            app:layout_constraintTop_toBottomOf="@+id/login_username"/>

    <View
            android:id="@+id/password_line"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/lineColor"
            app:layout_constraintLeft_toLeftOf="@+id/left_line"
            app:layout_constraintRight_toRightOf="@+id/right_line"
            app:layout_constraintTop_toBottomOf="@+id/login_password"/>

    <android.support.v7.widget.AppCompatImageView
            android:id="@+id/show_or_hide_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            app:layout_constraintBottom_toBottomOf="@+id/password_line"
            app:layout_constraintRight_toRightOf="@+id/right_line"
            app:layout_constraintTop_toTopOf="@+id/login_password"
            app:srcCompat="@mipmap/login_password_off"/>


    <TextView
            android:id="@+id/login_phone_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/phone_login"
            android:textColor="#6f8bef"
            android:visibility="gone"
            android:textSize="@dimen/sp_16"
            app:layout_constraintRight_toRightOf="@+id/right_line"
            app:layout_constraintTop_toBottomOf="@+id/password_line"/>

    <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/shape_login_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_18"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="@+id/left_line"
            app:layout_constraintRight_toRightOf="@+id/right_line"
            app:layout_constraintTop_toBottomOf="@+id/login_phone_verification"/>

    <TextView
            android:id="@+id/login_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/txtSecondColor"
            android:textSize="14sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="@+id/left_line"
            app:layout_constraintRight_toLeftOf="@+id/login_miss_password"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"/>

    <View
            android:layout_width="0.5dp"
            android:layout_height="0dp"
            android:background="#c1c7db"
            app:layout_constraintBottom_toBottomOf="@+id/login_register"
            app:layout_constraintLeft_toRightOf="@+id/login_register"
            app:layout_constraintTop_toTopOf="@+id/login_register"/>

    <TextView
            android:id="@+id/login_miss_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/txtSecondColor"
            android:textSize="14sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/login_register"
            app:layout_constraintRight_toRightOf="@+id/right_line"
            app:layout_constraintTop_toTopOf="@+id/login_register"/>


</android.support.constraint.ConstraintLayout>